# deflex

./: .coveragerc  .gitignore  .prospector.yml  .stickler.yml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  README.md  README.rst  VERSION  nose.cfg  pytest.ini  setup.cfg  setup.py  tox.ini
ci/: bootstrap.py
de21/: __init__.py  basic_de22_scenario.py  basic_scenario.py  chp.py  de21_default.ini  de21_scenario.ini  de_dictionary.ini  demand.py  feedin.py  geometries.py  inhabitants.py  main.py  powerplants.py  scenario_data_generation.py  scenario_tools.py  storages.py  transmission.py
deflex/: __init__.py  analyses.py  basic_scenario.py  chp.py  config.py  data.py  de21_default.ini  de21_default.ini_backup  deflex.ini  demand.py  feedin.py  geometries.py  inhabitants.py  main.py  powerplants.py  results.py  scenario_builder.py  scenario_tools.py  storages.py  transmission.py
docs/: conf.py  deflex.rst  getting_started.rst  index.rst  index_old.rst  input_data.rst  installation.rst  reference.rst  requirements.txt  results.rst  usage.rst
examples/: basic_analyses.py  basic_analyses_example.py  electricity_market_scenario.py  emission_figure.py  examples.py  geoplot_lines.py  geoplot_lines_figure.py  geoplot_polygons.py  model_example.py  model_example2.py  model_example_long_version.py  model_scenarios_short_version.py  plot.ini  powerflow_example.py  results.py  results2spreadsheet.py  temp_ana.py
tests/: check_examples.py  regression_tests.py  test_analyses.py  test_config.py  test_console_scripts.py  test_cycles.py  (+18 more)
(+233 files in other folders)
