[bdist_wheel]
universal = 1

[flake8]
max-line-length = 79
exclude = */migrations/*, docs/conf.py

[pydocstyle]
ignore = D200, D203, D212, D406, D407

[pep257]
ignore = D200, D203, D212, D406, D407

[tool:pytest]
addopts =
    --doctest-modules
    --ignore=docs/conf.py
    --ignore=setup.py

[metadata]
description-file = README.rst

[tool:isort]
force_single_line = True
line_length = 79
known_first_party = oemof-solph
default_section = THIRDPARTY
forced_separate = test_oemof-solph
skip = migrations
